# peppyproject

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: build.yml  tests.yml
peppyproject/: __init__.py  __main__.py  base.py  cli.py  configuration.py  files.py  tables.py
peppyproject/tools/: __init__.py  base.py  coverage.py  flake8.py  ruff.py  setuptools.py  setuptools_scm.py
tests/: test_cli.py  test_configuration.py  test_files.py  test_read.py  test_to_toml.py  test_write.py
tests/data/input/jwst/: pyproject.toml
tests/data/input/setup_cfg/: setup.py
tests/data/input/setup_cfg/docs/: conf.py
tests/data/input/setup_py/: README.rst  setup.py
tests/data/reference/crds/: pyproject.toml
tests/data/reference/pyproject_toml/: pyproject.toml
tests/data/reference/setup_cfg/: pyproject.toml
tests/data/reference/setup_py/: pyproject.toml
