[project]
name = 'peppyproject'
description = 'create a PEP621-compliant `pyproject.toml` file from existing build configuration'
readme = { file = 'README.md', content-type = 'text/markdown' }
requires-python = '>=3.9'
license = { file = 'LICENSE' }
authors = [{ name = 'Zach Burnett' }]
dependencies = [
    "ini2toml[full]",
    "tomli",
    "tomli-w",
    "typepigeon>=2.0.1",
    "typer[rich]",
]
dynamic = [
    'version',
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
test = [
    'pytest',
    'tomli',
]

[project.urls]
'repository' = 'https://github.com/zacharyburnett/peppyproject'

[project.scripts]
peppyproject = 'peppyproject.__main__:main'

[build-system]
requires = [
    'setuptools >=61',
    'setuptools_scm[toml] >=3.4',
    'wheel',
]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]

[tool.ruff]
line-length = 127
extend-ignore = [
    'E722', # Do not use bare `except`
]
extend-exclude = [
    'build',
    'docs',
    '.eggs',
    '.tox',
    'venv',
    'tests/data',
]

[tool.coverage]
run = { branch = true, source = ['peppyproject'] }
report = { show_missing = true }
